--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <script src="/assets/javascript/script.js"></script>
+  <script src="./assets/javascript/script.js"></script>
 </body>
 
 </html>
