--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
       </div>
       <div class="card-footer">
-        <button id="generate" class="btn" onClick="writePassword()">Generate Password</button>
+        <button id="generate" class="btn">Generate Password</button>
       </div>
     </div>
   </div>
